Fixed dashboard layout issues, built out heatmap

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* REQUIRED for Leaflet maps */
+.leaflet-container {
+  width: 100%;
+  height: 500px;
+}
+
